# Vyom-Ground-Station

./: .gitignore  .gitmodules  CMakeLists.txt  Data.cpp  Vyom-Ground-Station.pro  main.cpp
lib/: CMakeLists.txt
lib/public/models/: Data.hpp  TelemeteryView.hpp  Updater.hpp
lib/src/: format.hpp
lib/src/devices/: CSVFile.cpp  CSVFile.hpp  File.cpp  File.hpp  Serial.cpp  Serial.hpp
lib/src/include/: Device.hpp  IChartData.hpp
lib/src/models/: Data.cpp  DummyData.cpp  TelemeteryView.cpp  Updater.cpp
lib/src/utils/: CSVHandler.cpp  CSVHandler.hpp  CSVParser.cpp  CSVParser.hpp  CircularBuffer.hpp  StringParser.hpp
lib/tests/: CMakeLists.txt  tst_device_file.cpp  tst_device_serial.cpp  tst_utils_circular_buffer.cpp  tst_utils_csvparser.cpp
lib/tests/test_data/: parser_test.csv
ui-qml/: CMakeLists.txt  main.cpp  res.qrc
ui-qml/components/: BottomBar.qml  Chart.qml  GraphView.qml  LeftSide.qml  LeftSide.qml~RF8ca2bdf7.TMP  RightSide.qml  TopBar.qml  qmldir
ui-qml/components/Charts/: AltitudeChart.qml  Chart.qml  Pitch.qml  TempChart.qml  VoltageChart.qml  Yaw.qml  qmldir
ui-qml/images/: main.cpp
ui-qml/src/: main.cpp
ui-qml/views/: app.qml  main.qml
